# sim_bot

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: gazebo_params.yaml  gz_bridge.yaml  joy.yaml  joy_params.yaml  nav_params.yaml  slam_params.yaml  twist_mux_params.yaml
description/: 3dlidar.xacro  ackermann.urdf.xacro  camera.xacro  common.xacro  depth_camera.xacro  diff_bot.urdf.xacro  four_wheel.urdf.xacro  inertials.xacro  lidar.xacro  materials.xacro
launch/: ackermann_sim.launch.py  diff_bot.launch.py  diff_bot_sim.launch.py  four_wheel.launch.py  four_wheel_sim.launch.py  nav.launch.py  rsp.launch.py  slam.launch.py  teleop.launch.py
rviz/: bot.rviz  diff_bot.rviz  four_wheel_bot.rviz
worlds/: empty.world  test.world
