<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_bot</name>
  <version>0.2.0</version>
  <description>ROS2 package for simulated robots</description>
  <maintainer email="ingalexanderlevy@gmail.com">Alex Levy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Add dependencies -->
  <depend>ros-humble-xacro</depend>
  <depend>ros-humble-twist-mux</depend>
  <depend>ros-humble-slam-toolbox</depend>
  <depend>ros-humble-navigation2</depend>     
  <depend>ros-humble-ros-gz</depend>
  <depend>ros-humble-octomap</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
